--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -18,9 +18,15 @@
 </head>
 <body>
 <div class="container-fluid">
+    {% set root_url = ['', '/', '/fr/', '/en/', '/nl/', '/es/', '/de/'] %}
+    <!-- get current alternative -->
+    {% for alternatives in root_url  %}
+        {% if alternatives in this.url_path %}
+            {% set alt = alternatives %}
+        {% endif %}
+    {% endfor %}
+
     <div class="row d-flex d-md-block flex-nowrap wrapper">
-        <!-- On n'affiche le menu que sur la page d'accueil -->
-        {% set root_url = ['', '/', '/fr/', '/en/', '/nl/', '/es/', '/de/'] %}
         {% if this.url_path in root_url %}
             <div id="sidebar" class="col-md-2 float-left col-1 pl-0 pr-0 collapse width show">
                 <div class="position-fixed col-md-2">
@@ -35,14 +41,19 @@
                         <a href="#program"
                            class="list-group-item d-inline-block collapsed"
                            data-toggle="collapse"
-                           aria-expanded="false">Programme</a>
+                           aria-expanded="false">{{ this.s_program }}</a>
 
                         <div class="collapse" id="program">
                             <a href="#anchor-overview" class="list-group-item">{{ this.s_overview_program }}</a>
-                            <a href="{{ '/dimanche-26-aout' | url }}" class="list-group-item">Sunday 26th</a>
-                            <a href="{{ '/lundi-27-aout' | url }}"    class="list-group-item">Monday 27th</a>
-                            <a href="{{ '/mardi-28-aout' | url }}"    class="list-group-item">Thuesday 28th</a>
-                            <a href="{{ '/mercredi-29-aout' | url }}" class="list-group-item">Wednesday 29th</a>
+                            {% if alt == 'fr' %}
+                                {% set alt = '' %}
+                            {% else %}
+                                {% set alt = '/' + alt %}
+                            {% endif %}
+                            <a href="{{ alt + '/dimanche-26-aout' | url }}" class="list-group-item">{{ this.s_sunday_26 }}</a>
+                            <a href="{{ alt + '/lundi-27-aout'    | url }}" class="list-group-item">{{ this.s_monday_27 }}</a>
+                            <a href="{{ alt + '/mardi-28-aout'    | url }}" class="list-group-item">{{ this.s_thuesday_28 }}</a>
+                            <a href="{{ alt + '/mercredi-29-aout' | url }}" class="list-group-item">{{ this.s_wednesday_29 }}</a>
                         </div>
                         <a href="#anchor-speakers"        class="list-group-item d-inline-block collapsed">{{ this.s_speakers }}</a>
                         <a href="#anchor-expo"            class="list-group-item d-inline-block collapsed">{{ this.s_expo }}</a>
@@ -57,7 +68,9 @@
                     </div>
                 </div>
             </div>
+
         {% else %}
+            {% set root_page = site.get_root(alt=alt) %}
             <div id="sidebar" class="col-md-2 float-left col-1 pl-0 pr-0 collapse width show">
                 <div class="position-fixed col-md-2">
                     <div class="text-center brand">
@@ -69,22 +82,28 @@
                         <a href="#program"
                            class="list-group-item d-inline-block collapsed"
                            data-toggle="collapse"
-                           aria-expanded="false">Programme</a>
+                           aria-expanded="false">{{ root_page.s_program }}</a>
+                        {% if alt == 'fr' %}
+                                {% set alt = '' %}
+                            {% else %}
+                                {% set alt = '/' + alt %}
+                            {% endif %}
+
                         <div class="collapse" id="program">
-                            <a href="{{ '#anchor-overview' }}" class="list-group-item">{{ this.s_overview_program }}</a>
-                            <a href="{{ '/dimanche-26-aout' | url }}" class="list-group-item">Sunday 26th</a>
-                            <a href="{{ '/lundi-27-aout' | url }}"    class="list-group-item">Monday 27th</a>
-                            <a href="{{ '/mardi-28-aout' | url }}"    class="list-group-item">Thuesday 28th</a>
-                            <a href="{{ '/mercredi-29-aout' | url }}" class="list-group-item">Wednesday 29th</a>
+                            <a href="{{ '#anchor-overview' }}" class="list-group-item">{{ root_page.s_overview_program }}</a>
+                            <a href="{{ alt + '/dimanche-26-aout' | url }}" class="list-group-item">{{ root_page.s_sunday_26 }}</a>
+                            <a href="{{ alt + '/lundi-27-aout'    | url }}" class="list-group-item">{{ root_page.s_monday_27 }}</a>
+                            <a href="{{ alt + '/mardi-28-aout'    | url }}" class="list-group-item">{{ root_page.s_thuesday_28 }}</a>
+                            <a href="{{ alt + '/mercredi-29-aout' | url }}" class="list-group-item">{{ root_page.s_wednesday_29 }}</a>
                         </div>
-                        <a href="{{ '/#anchor-speakers'        }}" class="list-group-item d-inline-block collapsed">{{ this.s_speakers }}</a>
-                        <a href="{{ '/#anchor-expo'            }}" class="list-group-item d-inline-block collapsed">{{ this.s_expo }}</a>
-                        <a href="{{ '/#anchor-partners'        }}" class="list-group-item d-inline-block collapsed">{{ this.s_partners }}</a>
-                        <a href="{{ '/#anchor-inscription'     }}" class="list-group-item d-inline-block collapsed">{{ this.s_registration }}</a>
-                        <a href="{{ '/#anchor-practical-infos' }}" class="list-group-item d-inline-block collapsed">{{ this.s_practical_infos }}</a>
-                        <a href="{{ '/#anchor-submissions'     }}" class="list-group-item d-inline-block collapsed">{{ this.s_submissions }}</a>
-                        <a href="{{ '/#anchor-press'           }}" class="list-group-item d-inline-block collapsed">{{ this.s_press }}</a>
-                        <a href="{{ '/#anchor-contact'         }}" class="list-group-item d-inline-block collapsed">{{ this.s_contact }}</a>
+                        <a href="{{ alt + '/#anchor-speakers'        }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_speakers }}</a>
+                        <a href="{{ alt + '/#anchor-expo'            }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_expo }}</a>
+                        <a href="{{ alt + '/#anchor-partners'        }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_partners }}</a>
+                        <a href="{{ alt + '/#anchor-inscription'     }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_registration }}</a>
+                        <a href="{{ alt + '/#anchor-practical-infos' }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_practical_infos }}</a>
+                        <a href="{{ alt + '/#anchor-submissions'     }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_submissions }}</a>
+                        <a href="{{ alt + '/#anchor-press'           }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_press }}</a>
+                        <a href="{{ alt + '/#anchor-contact'         }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_contact }}</a>
                         <hr>
 
                         &copy; Copyright 2018 by Nicolas Pettiaux.
@@ -98,19 +117,19 @@
                     <div class="col-12">
                         <span class="text-white">Langue</span>
 
-                        <a class="language-link {% if this.url_path == '/'  %} {{ 'current' }} {% endif %}" href="{{ '/' }}">
+                        <a class="language-link {% if this.url_path == '/'  %} {{ 'current' }} {% endif %}" href="{{ this.path | url(alt='fr') }}">
                             <img width="16px" height="16px" src="{{ '/imgs/fr.png' | url }}" alt=""> FR
                         </a>
-                        <a class="language-link {% if this.url_path == '/nl/'  %} {{ 'current' }} {% endif %}" href="{{ '/nl' }}">
+                        <a class="language-link {% if '/nl/' in this.url_path  %} {{ 'current' }} {% endif %}" href="{{ this.path | url(alt='nl') }}">
                             <img width="16px" height="16px" src="{{ '/imgs/nl.png' | url }}" alt=""> NL
                         </a>
-                        <a class="language-link {% if this.url_path == '/en/'  %} {{ 'current' }} {% endif %}" href="{{ '/en' }}">
+                        <a class="language-link {% if '/en/' in this.url_path  %} {{ 'current' }} {% endif %}" href="{{ this.path | url(alt='en') }}">
                             <img width="16px" height="16px" src="{{ '/imgs/gb.png' | url }}" alt=""> EN
                         </a>
-                        <a class="language-link {% if this.url_path == '/de/'  %} {{ 'current' }} {% endif %}" href="{{ '/de' }}">
+                        <a class="language-link {% if '/de/' in this.url_path  %} {{ 'current' }} {% endif %}" href="{{ this.path | url(alt='de') }}">
                             <img width="16px" height="16px" src="{{ '/imgs/de.png' | url }}" alt=""> DE
                         </a>
-                        <a class="language-link {% if this.url_path == '/es/'  %} {{ 'current' }} {% endif %}" href="{{ '/es' }}">
+                        <a class="language-link {% if '/es/' in this.url_path  %} {{ 'current' }} {% endif %}" href="{{ this.path | url(alt='es') }}">
                             <img width="16px" height="16px" src="{{ '/imgs/es.png' | url }}" alt=""> ES
                         </a>
                     </div>
@@ -143,8 +162,9 @@
 
     $(function () {
 
-        if ($("#landing-page-content").length > 0)
-            window.history.pushState("object or string", "Welcome - EduCode", "/");
+        {% if this == site.get_root() %}
+            window.history.pushState("object or string", "Welcome - EduCode", "{{ this.path | url(alt=alt) }}");
+        {% endif %}
 
         var $root = $('html, body');
 
