--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -219,9 +219,16 @@
 
             <div id="anchor-inscription" class="col-12">
                 <h4 class="title text-center">{ {{ this.s_registration }} }</h4>
-                <div class="alert alert-warning text-center">
                     {{ this.registration }}
-                </div>
+
+                    <div class="container-fluid">
+                        <div class="row">
+                            <iframe src="https://framaforms.org/inscription-educode-1512709479"
+                                    style="border: solid #EEE 1px"
+                                    width="100%"
+                                    height="600"></iframe>
+                        </div>
+                    </div>
             </div>
 
             <div id="anchor-practical-infos" class="col-12">
