uniformisation des titres, ils sont tous a left aligned

--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -32,7 +32,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h4 class="title">< {{ this.s_about_educode }} /></h4>
+                <h4 class="title title-left">< {{ this.s_about_educode }} /></h4>
                 <div class="about">
                     {{ this.about }}
                 </div>
@@ -78,7 +78,7 @@
             </div>
 
             <div id="anchor-speakers" class="col-12">
-                <h4 class="title">{ <i class="fa fa-users" aria-hidden="true"></i> {{ this.s_speakers }} }</h4>
+                <h4 class="title title-left">{ <i class="fa fa-users" aria-hidden="true"></i> {{ this.s_speakers }} }</h4>
             </div>
 
             <!-- On récupère tous les intervenants -->
@@ -118,7 +118,7 @@
             </div>
 
             <div id="anchor-expo" class="col-12">
-                <h4 class="title text-center"> ___ {{ this.s_expo }} ___ </h4>
+                <h4 class="title title-left"> {{ this.s_expo }} </h4>
                 <div id="expo-about" class="container">
                     <div class="row">
                         <div class="col-12">
@@ -165,7 +165,7 @@
     <div class="container">
         <div class="row">
             <div id="anchor-partners" class="col-12">
-                <h4 class="title text-center">{ <i class="fa fa-users" aria-hidden="true"></i> {{ this.s_partners }} }</h4>
+                <h4 class="title title-left">{ <i class="fa fa-users" aria-hidden="true"></i> {{ this.s_partners }} }</h4>
 
                 <div>
                     {{ this.partners_about }}
@@ -218,7 +218,7 @@
 
 
             <div id="anchor-inscription" class="col-12">
-                <h4 class="title text-center">{ {{ this.s_registration }} }</h4>
+                <h4 class="title title-left">{ {{ this.s_registration }} }</h4>
                     {{ this.registration }}
 
                     <div class="container-fluid">
@@ -232,7 +232,7 @@
             </div>
 
             <div id="anchor-practical-infos" class="col-12">
-                <h4 class="title text-center background-color-yellow color-blue border-blue">
+                <h4 class="title title-left">
                     /* {{ this.s_practical_infos }} */
                 </h4>
                 <div class="container practical-info-markdown">
@@ -350,7 +350,7 @@
 
             </div>
             <div id="anchor-submissions" class="col-12">
-                <h4 class="title text-center background-color-yellow color-blue border-blue">
+                <h4 class="title title-left">
                     /* {{ this.s_submissions }} */
                 </h4>
                 <div class="container">
