--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -37,7 +37,7 @@
                         </a>
                     </div>
 
-                    <div class="list-group border-0 card text-center ">
+                    <div class="list-group border-0 card">
                         <a href="#program"
                            class="list-group-item d-inline-block collapsed"
                            data-toggle="collapse"
@@ -50,19 +50,19 @@
                             {% else %}
                                 {% set alt = '/' + alt %}
                             {% endif %}
-                            <a href="{{ alt + '/dimanche-26-aout' | url }}" class="list-group-item">{{ this.s_sunday_26 }}</a>
-                            <a href="{{ alt + '/lundi-27-aout'    | url }}" class="list-group-item">{{ this.s_monday_27 }}</a>
-                            <a href="{{ alt + '/mardi-28-aout'    | url }}" class="list-group-item">{{ this.s_thuesday_28 }}</a>
-                            <a href="{{ alt + '/mercredi-29-aout' | url }}" class="list-group-item">{{ this.s_wednesday_29 }}</a>
+                            <a href="{{ alt + '/dimanche-26-aout' | url }}" class="list-group-item"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ this.s_sunday_26 }}</a>
+                            <a href="{{ alt + '/lundi-27-aout'    | url }}" class="list-group-item"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ this.s_monday_27 }}</a>
+                            <a href="{{ alt + '/mardi-28-aout'    | url }}" class="list-group-item"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ this.s_thuesday_28 }}</a>
+                            <a href="{{ alt + '/mercredi-29-aout' | url }}" class="list-group-item"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ this.s_wednesday_29 }}</a>
                         </div>
-                        <a href="#anchor-speakers"        class="list-group-item d-inline-block collapsed">{{ this.s_speakers }}</a>
-                        <a href="#anchor-expo"            class="list-group-item d-inline-block collapsed">{{ this.s_expo }}</a>
-                        <a href="#anchor-partners"        class="list-group-item d-inline-block collapsed">{{ this.s_partners }}</a>
-                        <a href="#anchor-inscription"     class="list-group-item d-inline-block collapsed">{{ this.s_registration }}</a>
-                        <a href="#anchor-practical-infos" class="list-group-item d-inline-block collapsed">{{ this.s_practical_infos }}</a>
-                        <a href="#anchor-submissions"     class="list-group-item d-inline-block collapsed">{{ this.s_submissions }}</a>
-                        <a href="#anchor-press"           class="list-group-item d-inline-block collapsed">{{ this.s_press }}</a>
-                        <a href="#anchor-contact"         class="list-group-item d-inline-block collapsed">{{ this.s_contact }}</a>
+                        <a href="#anchor-speakers"        class="list-group-item d-inline-block">{{ this.s_speakers }}</a>
+                        <a href="#anchor-expo"            class="list-group-item d-inline-block">{{ this.s_expo }}</a>
+                        <a href="#anchor-partners"        class="list-group-item d-inline-block">{{ this.s_partners }}</a>
+                        <a href="#anchor-inscription"     class="list-group-item d-inline-block">{{ this.s_registration }}</a>
+                        <a href="#anchor-practical-infos" class="list-group-item d-inline-block">{{ this.s_practical_infos }}</a>
+                        <a href="#anchor-submissions"     class="list-group-item d-inline-block">{{ this.s_submissions }}</a>
+                        <a href="#anchor-press"           class="list-group-item d-inline-block">{{ this.s_press }}</a>
+                        <a href="#anchor-contact"         class="list-group-item d-inline-block">{{ this.s_contact }}</a>
                         <hr>
                         &copy; Copyright 2018 by Nicolas Pettiaux.
                     </div>
@@ -91,10 +91,10 @@
 
                         <div class="collapse" id="program">
                             <a href="{{ '#anchor-overview' }}" class="list-group-item">{{ root_page.s_overview_program }}</a>
-                            <a href="{{ alt + '/dimanche-26-aout' | url }}" class="list-group-item">{{ root_page.s_sunday_26 }}</a>
-                            <a href="{{ alt + '/lundi-27-aout'    | url }}" class="list-group-item">{{ root_page.s_monday_27 }}</a>
-                            <a href="{{ alt + '/mardi-28-aout'    | url }}" class="list-group-item">{{ root_page.s_thuesday_28 }}</a>
-                            <a href="{{ alt + '/mercredi-29-aout' | url }}" class="list-group-item">{{ root_page.s_wednesday_29 }}</a>
+                            <a href="{{ alt + '/dimanche-26-aout' | url }}" class="list-group-item"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ root_page.s_sunday_26 }}</a>
+                            <a href="{{ alt + '/lundi-27-aout'    | url }}" class="list-group-item"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ root_page.s_monday_27 }}</a>
+                            <a href="{{ alt + '/mardi-28-aout'    | url }}" class="list-group-item"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ root_page.s_thuesday_28 }}</a>
+                            <a href="{{ alt + '/mercredi-29-aout' | url }}" class="list-group-item"><i class="fa fa-angle-right" aria-hidden="true"></i> {{ root_page.s_wednesday_29 }}</a>
                         </div>
                         <a href="{{ alt + '/#anchor-speakers'        }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_speakers }}</a>
                         <a href="{{ alt + '/#anchor-expo'            }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_expo }}</a>
@@ -123,6 +123,8 @@
                         <a class="language-link {% if '/nl/' in this.url_path  %} {{ 'current' }} {% endif %}" href="{{ this.path | url(alt='nl') }}">
                             <img width="16px" height="16px" src="{{ '/imgs/nl.png' | url }}" alt=""> NL
                         </a>
+
+                        <!--
                         <a class="language-link {% if '/en/' in this.url_path  %} {{ 'current' }} {% endif %}" href="{{ this.path | url(alt='en') }}">
                             <img width="16px" height="16px" src="{{ '/imgs/gb.png' | url }}" alt=""> EN
                         </a>
@@ -132,11 +134,12 @@
                         <a class="language-link {% if '/es/' in this.url_path  %} {{ 'current' }} {% endif %}" href="{{ this.path | url(alt='es') }}">
                             <img width="16px" height="16px" src="{{ '/imgs/es.png' | url }}" alt=""> ES
                         </a>
+                        -->
+
                     </div>
                 </div>
             </div>
-
-            <div style="background: url('{{ '/imgs/bg.jpg' | url }}') repeat-x top left fixed;">
+            <div id="content-wrapper" style="background: url('{{ '/imgs/bg.jpg' | url }}') repeat-x top left fixed;">
                 <a id="menu-icon" href="#" data-target="#sidebar" data-toggle="collapse">
                     <i class="fa fa-navicon d-md-none"></i>
                 </a>
@@ -162,18 +165,50 @@
 
     $(function () {
 
+        $(document).on("scroll", onScroll);
+
+
         {% if this == site.get_root() %}
             window.history.pushState("object or string", "Welcome - EduCode", "{{ this.path | url(alt=alt) }}");
         {% endif %}
 
         var $root = $('html, body');
+        var $document = $(document);
+        var $links = $('a[href^="#anchor"]');
+        $document.on('click', 'a[href^="#anchor"]', function (e) {
+            e.preventDefault();
+            $document.off("scroll");
+            $links.removeClass("selected");
+            $(this).addClass("selected");
 
-        $(document).on('click', 'a[href^="#anchor"]', function () {
-            $root.animate({
-                scrollTop: $( $.attr(this, 'href') ).offset().top
-            }, 500);
+            var target = this.hash,
+                menu = target;
+            $target = $(target);
+
+            $root.stop().animate({
+                scrollTop: $( $.attr(this, 'href') ).offset().top + 2
+            }, 500, 'swing', function () {
+                window.location.hash = target;
+                $document.on("scroll", onScroll);
+            });
+
             return false;
         });
+
+        function onScroll(event) {
+            let scrollPos = $document.scrollTop();
+            $links.each(function () {
+                let currLink = $(this);
+                let refElement = $(currLink.attr("href"));
+                if (refElement.position().top <= scrollPos && refElement.position().top + refElement.height() > scrollPos) {
+                    $links.removeClass("selected");
+                    currLink.addClass("selected");
+                }
+                else{
+                    currLink.removeClass("selected");
+                }
+            });
+        }
 
         $(window).on('resize', function (e) {
             if (getBootstrapBreakpoint() !== 'xs') {
