--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -357,6 +357,11 @@
                     {{ this.submissions_text }}
                 </div>
                 <hr>
+
+                <iframe src="https://framaforms.org/soumission-a-educode-1524690937"
+                        style="border: solid #EEE 1px"
+                        width="100%"
+                        height="600"></iframe>
                 <p class="text-center" data-aos="zoom-in-down">
                    <a  href="https://educode2018.sciencesconf.org/"
                        class="btn btn-lg btn-warning text-uppercase"
