Ajout partie blog
fix #10 #9 il est désormais possible de créer des articles de blogs, un espace commentaire est associé à chaque article.

--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </div>
-            <div id="content-wrapper" style="background: url('{{ '/imgs/bg.jpg' | url }}') repeat-x top left fixed;">
+            <div id="content-wrapper">
                 <a id="menu-icon" href="#" data-target="#sidebar" data-toggle="collapse">
                     <i class="fa fa-navicon d-md-none"></i>
                 </a>
