--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -157,7 +157,9 @@
                 </div>
                 <hr>
                 <p class="text-center" data-aos="zoom-in">
-                    <a class="btn btn-lg btn-primary text-uppercase" href="#">{{ this.text_button }}</a>
+                    <a class="btn btn-lg btn-primary text-uppercase"
+                       target="_blank"
+                       href="https://framaforms.org/preinscription-a-educode-1512709479">{{ this.text_button }}</a>
                 </p>
             </div>
         </div>
@@ -173,7 +175,8 @@
                 <div class="col-12"><hr></div>
 
                 <div class="col-12 text-center" data-aos="zoom-in-down">
-                    <a href="#" class="btn btn-lg btn-warning text-uppercase">{{ this.s_become_partner }}</a>
+                    <a href="#"
+                       class="btn btn-lg btn-warning text-uppercase">{{ this.s_become_partner }}</a>
                 </div>
 
                 <div class="col-12">
