Création page presse avec documents téléchargeables
La page est accessible également depuis la section "presse" de la page d'accueil.

--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -390,11 +390,12 @@
                     <span class="color-dark">{{ this.s_may }}</span>
                 </div>
                 <hr>
-                <div>
+                <div class="container">
                     {{ this.press_text }}
                 </div>
                 <p class="text-center" data-aos="zoom-in">
                     <a href="#" class="btn btn-primary btn-lg text-uppercase">{{ this.s_registration }}</a>
+                    <a href="{{ "/presse" | url }}" class="btn btn-primary btn-lg text-uppercase">Documents</a>
                 </p>
             </div>
         </div>
