--- a/EduCode/assets/static/home.scss
+++ b/EduCode/assets/static/home.scss
@@ -81,10 +81,7 @@
   }
 
   #contacts {
-    border-top: solid $yellow 5px;
-    border-bottom: solid $darker-yellow 5px;
     margin: 0 0 0 25px;
-    background-color: rgba(225, 177, 44, 0.34);
     padding: 20px;
     .contact {
       margin-top: 15px;
@@ -96,6 +93,7 @@
       p {
         font-weight: 600;
         text-align: center;
+        padding-top: 5px;
         border-top: solid $darker-yellow 2px;
       }
     }
