--- a/EduCode/templates/page.html
+++ b/EduCode/templates/page.html
@@ -171,7 +171,8 @@
                 <div class="col-12"><hr></div>
 
                 <div class="col-12 text-center">
-                    <a href="#" class="btn btn-lg btn-warning text-uppercase">{{ this.s_become_partner }}</a>
+                    <a href="mailto:partenariat@educode.be?subject=Devenir partenaire d'educode"
+                       class="btn btn-lg btn-warning text-uppercase">{{ this.s_become_partner }}</a>
                 </div>
 
                 <div class="col-12">
