qq partenaires + copyright => copyleft

--- a/EduCode/templates/layout.html
+++ b/EduCode/templates/layout.html
@@ -64,7 +64,7 @@
                         <a href="#anchor-press"           class="list-group-item d-inline-block">{{ this.s_press }}</a>
                         <a href="#anchor-contact"         class="list-group-item d-inline-block">{{ this.s_contact }}</a>
                         <hr>
-                        &copy; Copyright 2018 by Nicolas Pettiaux.
+                        &copy; Copyleft 2018 by Nicolas Pettiaux.
                     </div>
                 </div>
             </div>
@@ -106,7 +106,7 @@
                         <a href="{{ alt + '/#anchor-contact'         }}" class="list-group-item d-inline-block collapsed">{{ root_page.s_contact }}</a>
                         <hr>
 
-                        &copy; Copyright 2018 by Nicolas Pettiaux.
+                        &copy; Copyleft 2018 by Nicolas Pettiaux.
                     </div>
                 </div>
             </div>
